--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,22 +12,15 @@ jobs:
       with:
         go-version: 1.17
       id: go
-    
-    - name: setup env
-      # Temporary fix from
-      # https://github.com/actions/setup-go/issues/12
-      # https://github.com/actions/setup-go/issues/14
-      run: |
-        echo "##[set-env name=GOPATH;]$(dirname $GITHUB_WORKSPACE)"
-        echo "##[add-path]$(dirname $GITHUB_WORKSPACE)/bin"
-      shell: bash
-
+      
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
 
     - name: Get dependencies
       run: |
         go mod download
+        go get github.com/goreleaser/goreleaser@v1.4.1
+        ./install-godownloader.sh .
 
     - name: Build
       run: make
