--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,3 +27,9 @@ jobs:
 
     - name: Test
       run: make test
+      
+    - name: Build
+      run: |
+        make build-all
+        make release
+        
