--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -7,6 +7,16 @@ builds:
       - linux
       - windows
       - darwin
+    goarch:
+      - amd64
+      - arm
+      - arm64
+      - "386"
+    ignore:
+      - goos: darwin
+        goarch: 386
+      - goos: linux
+        goarch: arm
 archives:
   - replacements:
       darwin: Darwin
